<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="item">item</string>
    <string name="total">Total</string>
    <string name="import_db">Import</string>
    <string name="export_db">Export</string>
    <string name="edit_items">Edit Items</string>
    <string name="goal">Goal</string>
    <string name="item_name">Item Name</string>
    <string name="add_item">Add Item</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_item">Delete Item</string>
    
    <!-- Periods -->
    <string name="PERIOD_NONE_LABEL">No Period</string>
    <string name="PERIOD_DAILY_LABEL">Daily</string>
    <string name="PERIOD_WEEKLY_LABEL">Weekly</string>
    <string name="PERIOD_MONTHLY_LABEL">Monthly</string>

    <!-- Buttons -->
    <string name="BUTTON_YES">YES</string>
    <string name="BUTTON_NO">NO</string>
    <string name="BUTTON_MINUS">-</string>
    <string name="BUTTON_PLUS">+</string>
    <string name="BUTTON_ABOUT">About</string>
    
    <!-- Labels -->
    <string name="label_period">Period</string>
    <string name="title_subtract">Subtract</string>
    <string name="title_item">Item</string>
    <string name="title_add">Add</string>
    <string name="title_goal">Goal</string>

    <!-- Message Strings -->

    <string name="MSG_INFO_ADD_SUCCESS">Item Added. Hit back to return to the list.</string>
    <string name="MSG_INFO_CONFIRM_DELETE_TITLE">Confirm Delete</string>
    <string name="MSG_INFO_CONFIRM_DELETE_TEXT">Are you sure you want to delete this item?</string>
    <string name="MSG_INFO_DELETE_SUCCESS">Item deleted successfully</string>
    <string name="MSG_INFO_UPDATE_NAME">Item name set to</string>
    <string name="MSG_INFO_UPDATE_GOAL">Goal set to</string>
    <string name="MSG_ERROR_INCREMENT">Error increasing count of %s</string>
    <string name="MSG_ERROR_DECREMENT">Error decreasing count of %s</string>
    <string name="MSG_ERROR_NAME_EMPTY">Item Name cannot be empty</string>
    <string name="MSG_ERROR_PERIOD_EMPTY">Item period must be selected</string>
    <string name="MSG_ERROR_GOAL_EMPTY">Goal Quantity cannot be empty</string>
    <string name="MSG_ERROR_GOAL_NAN">Error: Goal must be a number</string>
    <string name="MSG_ERROR_NAME_DUPLICATE">An item with the same name already exists</string>
    <string name="MSG_ERROR_NOT_IN_DATABASE">Item cannot be updated - not found in database</string>
    <string name="MSG_ERROR_UPDATE_NAME">Error updating name</string>
    <string name="MSG_ERROR_UPDATE_GOAL">Error updating Goal</string>
    <string name="MSG_ERROR_DELETE_ITEM">Error deleting Item</string>
    <string name="MSG_NO_ITEMS">No Items for This Period</string>
    <string name="MSG_NO_PERIOD_SELECTED">Error No Period Selected</string>
    <string name="MSG_IMPORTING_WAIT">Importing, please wait&#8230;</string>
	<string name="MSG_IMPORT_SUCCESSFUL_TITLE">Import Successful</string>
	<string name="MSG_IMPORT_SUCCESSFUL_TEXT">The import was successful!</string>
	<string name="MSG_FILE_NOT_FOUND_TITLE">File not found</string>
	<string name="MSG_FILE_NOT_FOUND_TEXT">The file you selected could not be found.</string>
	<string name="MSG_IMPORT_CONFIRM_TITLE">Confirm Import</string>
	<string name="MSG_IMPORT_CONFIRM_TEXT">This import will erase your current %1$s data - are you sure you want to continue?</string>
	<string name="MSG_YES">Yes</string>
	<string name="MSG_NO">No</string>
	<string name="MSG_IMPORT_FAILED_TITLE">Import Failed</string>
	<string name="MSG_IMPORT_FAILED_EXTRACT_TEXT">Failed to extract backup</string>
	<string name="MSG_IMPORT_FAILED_PARSE_TEXT">Failed to parse backup</string>
	<string name="MSG_IMPORT_FAILED_READ_TEXT">Cannot read backup</string>
	<string name="MSG_SELECT_DIRECTORY">Select a directory</string>
	<string name="MSG_NO_ITEM_SELECTED">No Item Selected</string>
	<string name="MSG_OK">OK</string>
	
    <!-- Paragraphs -->
    <string name="about_title">About</string>
    <string name="about_paragraph">
        
        This app was created in order to provide an easy way to track 
        habbits in order to accomplish your goals. The app comes with 
        a pre-populated list of items for tracking your daily food consumptions.
       	As you consume of the item through the day, pressing the  "-" or the "+" 
       	will increase the counter to reach your goal as well as create a timestamp on a table 
       	which you can review at a late time. In future iterations of the app, these timestamps 
       	will be plotted in a graph so that you can visually inspect your habbits. 
        \n\n
         This app comes as-is with no support, use at your own risk. 
         Rememer to rate, comment, donate and enjoy!</string>
         
    
    <!-- Spinner Arrays -->
    
    
    <string-array name="sort_order">
        <item>Alphabetically</item>
        <item>Order Added</item>

    </string-array>
    
       <string-array name="starting_table_spinner">
        <item>No Period</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
       <string name="send_to">Send To...</string>
    

</resources>