<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/import_db"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/import_db"/>
    <item
        android:id="@+id/export_db"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/export_db"/>
   
    <!-- 
    <item
        android:id="@+id/edit_items"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit_items"/>
        
         -->
    
     <item
        android:id="@+id/add_item"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add_item"/>
     
       <item
        android:id="@+id/about_actvity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/BUTTON_ABOUT"/>

</menu>
